proxy_apps/pve-proxy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pve-service
spec:
  ports:
    - port: 8006
  type: ExternalName
  externalName: 192.168.10.3
